# travel-setup

./: README.md  pyproject.toml  requirements.txt
__tests__/: main.spec.py
src/: main.py
src/commands/: install.py
