[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["kauefraga <kauefragarodrigues456@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
