[tool.poetry]
name = "youtube-downloader"
version = "1.0.0"
description = ""
authors = ["Kauê Fraga Rodrigues <kauefragarodrigues456@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^12.1.2"
click = "^8.1.3"
rich = "^13.0.1"
validators = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
